# AOP_Uebungen

./: .gitignore  CMakeLists.txt  Eulerproblem.cpp  Eulerproblem.h  Eulerproblem1_10.cpp  Exercises.cpp  Exercises.h  Menu.cpp  SieveOfEratosthenes.cpp  connector.h  constants.h  eulerElevenToTwenty.cpp  eulerMenu.cpp  eulerOneToTen.cpp  eulerproblems.cpp  eulerproblems.h  main.cpp  primeCheckTrialDivision.cpp  reverseNumber.cpp
aop/: AOPExercises.cpp  AOPExercises.h  Fakultaet.cpp  aopCosinus.cpp  aopFibonacci.cpp  aopHeronAlgorythm.cpp  aopNullstellen.cpp  aopSquareRoot.cpp
euler/: EulerSolutions1_10.cpp  Eulerproblem.cpp  Eulerproblem.h  constants.h  eulerMenu.cpp
service/: PrimeRepository.cpp  SieveOfEratosthenes.cpp  SmallMathTools.cpp  UserInteractions.cpp  getFactorial.cpp  isStringANumber.cpp  parseIntFromString.cpp  primeCheckTrialDivision.cpp  reverseNumber.cpp
