cmake_minimum_required(VERSION 3.0)
project(AOP_Uebungen)

set(CMAKE_CXX_STANDARD 14)

add_executable(aol_uebungen main.cpp connector.h eulerMenu.cpp constants.h Eulerproblem1_10.cpp Eulerproblem.h Eulerproblem.cpp SieveOfEratosthenes.cpp reverseNumber.cpp primeCheckTrialDivision.cpp PrimeRepository.cpp)
